# hoyle

./: .gitignore  Cargo.toml  IR_Architecture.md  README.md
arena_alloc/: Cargo.toml
arena_alloc/src/: general.rs  interning.rs  lib.rs
cli/: Cargo.toml
cli/src/: main.rs  read.rs  repl.rs  test.rs
design/: desugar.md  rationale.md  type_system.md
desugar/: Cargo.toml
desugar/src/: builder.rs  desugar.rs  env.rs  lib.rs
emit/: Cargo.toml
emit/src/: emitter.rs  lib.rs
flattener/: Cargo.toml
flattener/src/: bindings.rs  lib.rs
ir/: Cargo.toml
ir/src/: ast.rs  bridge.rs  desugared.rs  flattened.rs  lib.rs  metadata.rs  name_source.rs  qualified.rs  source.rs  span.rs  tas.rs  token.rs  typed.rs
lexer/: Cargo.toml
lexer/src/: lexer.rs  lib.rs  span_source.rs
lower/: Cargo.toml
lower/src/: env.rs  lib.rs  lower.rs  offset.rs  refcount.rs
macros/: Cargo.toml
macros/src/: lib.rs
metadata/: Cargo.toml
metadata/src/: lib.rs  metadata.rs
parser/: Cargo.toml
parser/src/: alloc.rs  expr.rs  lib.rs  parser.rs  pattern.rs  program.rs  types.rs  util.rs
qualifier/: Cargo.toml
qualifier/src/: definitions.rs  error.rs  lib.rs  qualifier.rs
sizer/: Cargo.toml
sizer/src/: env.rs  lib.rs  sizer.rs
tests-integration/: Cargo.toml  tests.rs
tests-integration/src/: check_qualified.rs  frontend.rs  lib.rs
tree/: Cargo.toml
tree/src/: desugared.rs  generic.rs  lib.rs  metadata.rs  parsed.rs  qualified.rs  sized.rs  source.rs  token.rs  type_passing.rs  typed.rs
type_checker/: Cargo.toml
type_checker/src/: check.rs  env.rs  error.rs  extract.rs  infer.rs  lib.rs  specialize.rs  substitute.rs  unify.rs
type_passing/: Cargo.toml
type_passing/src/: env.rs  lib.rs  pass.rs
