[workspace]
members = [
  # Utilities
  "arena_alloc",
  "macros",

  # Public Interface
  "cli",

  # Intermediate Representations for the frontend
  "tree",

  # Intermediate Representations for the backend
  "ir",


  # Frontend
  "lexer",
  "parser",
#  "qualifier",
#  "type_checker",
#
#  # Backend
#  "metadata",
#  "desugar",
#  
#  # Internal
#  "tests-integration"
]
