[workspace]
members = [
  # Utilities
  "arena_alloc",
  "macros",

  # Public Interface
  "cli",

  # Intermediate Representations for the frontend
  "tree",

  # Intermediate Representations for the backend
  "ir",


  # Frontend
  "lexer",
  "parser",
  "type_checker",
  "type_passing",
  "sizer",
  "lower",
  "emit"
#  "qualifier",
#
#  # Backend
#  "metadata",
#  "desugar",
#  
#  # Internal
#  "tests-integration"
]
