[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bumpalo = "3.11.1"
infinite-iterator = "0.1.0"
ir = { path = "../ir" }
lexer = { path = "../lexer" }
parser = { path = "../parser" }
type_checker = { path = "../type_checker" }
arena_alloc = { path = "../arena_alloc" }
qualifier = { path = "../qualifier" }