[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bumpalo = "3.11.1"
lexer = { path = "../lexer" }
parser = { path = "../parser" }
type_checker = { path = "../type_checker" }
type_passing = { path = "../type_passing" }
sizer = { path = "../sizer" }
tree = { path = "../tree" }
lower = { path = "../lower" }
emit = { path = "../emit" }
fastrand = "2.1.0"
